Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -25,6 +25,7 @@ content:
         label: Media Items
         type: object
         list: true
+        required: true
         fields: 
           - name: type
             label: Type
