--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
